# Projeto

./: .gitignore  README.md  build.bat  build.py  conflito_exemplo_amigo.py  conflito_exemplo_voce.py  executar-completo.bat  executar-testes.bat  main.py  pom.xml  pyproject.toml  resolucao_conflito.py  run_simple.bat
retro_games/: __init__.py  main.py  models.py
src/main/java/: Calculadora.java
src/test/java/: CalculadoraTest.java
templates/: index.html
